# captcha_service

./: .dockerignore  .gitignore  Dockerfile  README.md  downloader.py  main.py  pyproject.toml  readme.md  requirements.txt  sources.list  test.py
.gitea/workflows/: release.yaml
.github/workflows/: release.yaml
services/: pyocr_service.py
